--- a/historia.html
+++ b/historia.html
@@ -59,6 +59,31 @@
                     <p class="historia__block--text3">Durante sus comienzos, Akatsuki fue formada por Yahiko, junto a sus compañeros Nagato y Konan, quienes buscaban encontrar la paz sin llegar a utilizar la violencia y llegando a acuerdos pacíficos con los invasores.</p>
             </div>
         </div>
+        <div id="carrousel">
+            <div class="col-10 m-auto">
+                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="media/historia/inicios1.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="media/historia/inicios2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="media/historia/inicios3.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footercontent">
